<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_nav_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_proxies"
            android:icon="@drawable/ic_nav_proxies"
            android:title="@string/nav_proxies" />
        <item
            android:id="@+id/nav_vpn"
            android:icon="@drawable/ic_nav_vpn"
            android:title="@string/nav_vpn" />
        <item
            android:id="@+id/nav_dns"
            android:icon="@drawable/ic_nav_dns"
            android:title="@string/nav_dns" />
        <item
            android:id="@+id/nav_circuits"
            android:icon="@drawable/ic_nav_circuits"
            android:title="@string/nav_circuits" />
        <item
            android:id="@+id/nav_onion"
            android:icon="@drawable/ic_nav_onion"
            android:title="@string/nav_onion" />
        <item
            android:id="@+id/nav_control"
            android:icon="@drawable/ic_nav_control"
            android:title="@string/nav_control" />
        <item
            android:id="@+id/nav_logs"
            android:icon="@drawable/ic_nav_logs"
            android:title="@string/nav_logs" />
    </group>
</menu>
